Actions
Bug #11449
closedzoneadmd: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
zoneadmd.c: In function 'notify_zonestatd': zoneadmd.c:526:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] params.rsize = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 35c005f243fafd7cad624b8a3a64298cab8ac172
commit 35c005f243fafd7cad624b8a3a64298cab8ac172 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-31T06:36:21.000Z 11449 zoneadmd: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions